applies L-LDA from http://github.com/twitter/mahout/